--- a/app/[locale]/(pages)/(components)/navigation/navigation.module.scss
+++ b/app/[locale]/(pages)/(components)/navigation/navigation.module.scss
@@ -92,7 +92,7 @@
 
     .langMobile {
       position: absolute;
-      right: 3rem;
+      right: 3.5rem;
       top: 50%;
       transform: translateY(-50%);
 
